k8s/backend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  namespace: devops-blog


spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
  
    spec:
      containers:
      - name: backend
        image: jaydipaws/devops-blog-backend:v2
        

        ports:
        - containerPort: 8080

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
          
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
