k8s/frontend-deployment.yaml
apiVersion: apps/v1

kind: Deployment


metadata: 
  name: frontend
  namespace: devops-blog

spec:
  replicas: 2



  selector:
    matchLabels: 
      app: frontend


  template:
    metadata: 
      labels:
        app: frontend


    spec:
      containers:
        - name: frontend
          image: jaydipaws/devops-blog-frontend:v1
          ports: 
            - containerPort: 3000
