k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress


metadata: 
  name: blog-ingress
  namespace: devops-blog

spec:
  rules:

  - host: devops.local


    http:
      paths:


      - path: /
        pathType: Prefix


        backend:
          service: 
            name: frontend-service
            port: 
              number: 3000


      - path: /api
        pathType: Prefix


        backend: 
          service: 
            name: backend-service
            port: 
              number: 8080
